force-app/main/default/src/objects/CareProgram/CareProgram.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>