force-app/main/default/src/objects/CareProgram/fields/MVN_Copay_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Group_Number__c</fullName>
    <description>The plan&apos;s pharmacy group number or the unique number a plan assigns to an employer group or another entity purchasing health coverage on behalf of its employees/members.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>