force-app/main/default/src/objects/CareProgram/fields/PJN_Filter_Round_Robin_by_Payers__c.field-meta.xml
<CustomField>
    <fullName>PJN_Filter_Round_Robin_by_Payers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, specialty pharmacy round robin assignment will require payers to have a list of pharmacies and there must be some intersection between the program pharmacy list and the payer pharmacy list in order to assign a pharmacy.</description>
    <inlineHelpText>When selected, specialty pharmacy round robin assignment will require payers to have a list of pharmacies and there must be some intersection between the program pharmacy list and the payer pharmacy list in order to assign a pharmacy.</inlineHelpText>
    <label>Filter Round Robin by Payers</label>
    <type>Checkbox</type>
</CustomField>