force-app/main/default/src/objects/CareProgram/fields/PJN_PAP_Federal_Poverty_Level_Threshold__c.field-meta.xml
<CustomField>
    <fullName>PJN_PAP_Federal_Poverty_Level_Threshold__c</fullName>
    <description>The threshold for this program to determine PAP eligibility. Any value above this is considered ineligible.</description>
    <inlineHelpText>The threshold for this program to determine PAP eligibility. Any value above this is considered ineligible.</inlineHelpText>
    <label>PAP Federal Poverty Level Threshold</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>