force-app/main/default/src/objects/CareProgram/fields/PJN_Program_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_DeveloperName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Program DeveloperName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>